Fix spacing for small text elements

--- a/app/styles/text.scss
+++ b/app/styles/text.scss
@@ -48,12 +48,12 @@ p {
 
 n {
 
-	display:inline;
 	font-size:13px;
 	font-weight:400;
 	line-height:1.5;
 	margin-top:10px;
 	font-family:'Inter';
+	display:inline-block;
 	color:var(--faint-color);
 
 	a {
